services/bookmarks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmarks
  namespace: bookmarks
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: bookmarks
