services/bookmarks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmarks
  namespace: bookmarks
spec:
  ingressClassName: traefik
  rules:
  - host: bookmarks.completeautomate.com
    http:
      paths:
      - backend:
          service:
            name: bookmarks
            port:
              number: 80
        path: /
        pathType: Prefix
